--- a/1st assignment/House_Price_Prediction.ipynb
+++ b/1st assignment/House_Price_Prediction.ipynb
@@ -1189,13 +1189,6 @@
         "outputId": "d1020dd8-9695-434e-98f8-52d93da1c4f6"
       },
       "source": [
-        "# Review the list of categorical columns:\n",
-        "# ['MSZoning', 'Street', 'Alley', 'LotShape', 'LandContour', 'Utilities', 'LotConfig', 'LandSlope', 'Neighborhood', 'Condition1', 'Condition2', 'BldgType', 'HouseStyle', 'RoofStyle', 'RoofMatl', 'Exterior1st', 'Exterior2nd', 'MasVnrType', 'ExterQual', 'ExterCond', 'Foundation', 'BsmtQual', 'BsmtCond', 'BsmtExposure', 'BsmtFinType1', 'BsmtFinType2', 'Heating', 'HeatingQC', 'CentralAir', 'Electrical', 'KitchenQual', 'Functional', 'FireplaceQu', 'GarageType', 'GarageFinish', 'GarageQual', 'GarageCond', 'PavedDrive', 'PoolQC', 'Fence', 'MiscFeature', 'SaleType', 'SaleCondition']\n",
-        "\n",
-        "# Based on domain knowledge and potential cardinality, select columns for one-hot encoding.\n",
-        "# Nominal features are good candidates for one-hot encoding.\n",
-        "# Features with very high cardinality might not be suitable for one-hot encoding directly.\n",
-        "\n",
         "one_hot_columns = [\n",
         "    'MSZoning', 'Street', 'Alley', 'LotShape', 'LandContour', 'Utilities',\n",
         "    'LotConfig', 'LandSlope', 'Neighborhood', 'Condition1', 'Condition2',\n",
@@ -1230,10 +1223,6 @@
         "outputId": "e3154119-70df-410f-94e9-285fd2740008"
       },
       "source": [
-        "# Review the list of categorical columns:\n",
-        "# ['MSZoning', 'Street', 'Alley', 'LotShape', 'LandContour', 'Utilities', 'LotConfig', 'LandSlope', 'Neighborhood', 'Condition1', 'Condition2', 'BldgType', 'HouseStyle', 'RoofStyle', 'RoofMatl', 'Exterior1st', 'Exterior2nd', 'MasVnrType', 'ExterQual', 'ExterCond', 'Foundation', 'BsmtQual', 'BsmtCond', 'BsmtExposure', 'BsmtFinType1', 'BsmtFinType2', 'Heating', 'HeatingQC', 'CentralAir', 'Electrical', 'KitchenQual', 'Functional', 'FireplaceQu', 'GarageType', 'GarageFinish', 'GarageQual', 'GarageCond', 'PavedDrive', 'PoolQC', 'Fence', 'MiscFeature', 'SaleType', 'SaleCondition']\n",
-        "\n",
-        "# Identify ordinal columns based on domain knowledge.\n",
         "ordinal_columns = [\n",
         "    'ExterQual', 'ExterCond', 'BsmtQual', 'BsmtCond', 'BsmtExposure',\n",
         "    'BsmtFinType1', 'BsmtFinType2', 'HeatingQC', 'KitchenQual',\n",
@@ -3004,10 +2993,8 @@
       "source": [
         "imputation_transformers = []\n",
         "\n",
-        "# Numerical columns with missing values and their preferred imputation strategy\n",
         "numerical_impute_median = ['LotFrontage', 'MasVnrArea', 'GarageYrBlt']\n",
         "\n",
-        "# Categorical columns with missing values and their preferred imputation strategy\n",
         "categorical_impute_constant = ['Alley', 'MasVnrType', 'BsmtQual', 'BsmtCond', 'BsmtExposure',\n",
         "                              'BsmtFinType1', 'BsmtFinType2', 'FireplaceQu', 'GarageType',\n",
         "                              'GarageFinish', 'GarageQual', 'GarageCond', 'PoolQC',\n",
@@ -3023,12 +3010,6 @@
         "for col in categorical_impute_most_frequent:\n",
         "    imputation_transformers.append((f'impute_{col}', SimpleImputer(strategy='most_frequent'), col))\n",
         "\n",
-        "# Add other existing transformers from the original trf1 if needed, or reconstruct based on the task.\n",
-        "# Since the task is to create a CT for imputation only, we'll include only the imputation steps.\n",
-        "# The original trf1 also included imputation for 'LandContour', 'Utilities', 'ExterQual', 'LandSlope', 'Neighborhood'\n",
-        "# Let's check if these columns had missing values based on the 'columns_with_nulls' output.\n",
-        "# 'LandContour', 'Utilities', 'ExterQual', 'LandSlope', 'Neighborhood' do not have missing values.\n",
-        "# So, we only need to include imputation for the columns identified in columns_with_nulls.\n",
         "\n",
         "trf1 = ColumnTransformer(imputation_transformers, remainder='passthrough')"
       ],
@@ -3054,10 +3035,8 @@
       "source": [
         "imputation_transformers = []\n",
         "\n",
-        "# Numerical columns with missing values and their preferred imputation strategy\n",
         "numerical_impute_median = ['LotFrontage', 'MasVnrArea', 'GarageYrBlt']\n",
         "\n",
-        "# Categorical columns with missing values and their preferred imputation strategy\n",
         "categorical_impute_constant = ['Alley', 'MasVnrType', 'BsmtQual', 'BsmtCond', 'BsmtExposure',\n",
         "                              'BsmtFinType1', 'BsmtFinType2', 'FireplaceQu', 'GarageType',\n",
         "                              'GarageFinish', 'GarageQual', 'GarageCond', 'PoolQC',\n",
@@ -3917,32 +3896,25 @@
         "outputId": "7cdd8126-961d-423c-b225-4346cad1cbce"
       },
       "source": [
-        "# Correctly identify categorical and numerical columns based on the original train_df dtypes\n",
+        "\n",
         "categorical_columns_original = train_df.select_dtypes(include=['object', 'category']).columns.tolist()\n",
         "numerical_columns_original = train_df.select_dtypes(include=np.number).columns.tolist()\n",
         "\n",
-        "# The transformed DataFrame columns are named using the transformer names and original column names.\n",
-        "# We need to map the original column names to the new column names in train_imputed_df.\n",
-        "# The get_feature_names_out() method of the transformer gives us this mapping.\n",
-        "\n",
-        "# Get the feature names from the transformer.\n",
         "transformed_feature_names = trf1.get_feature_names_out(train_df.columns)\n",
         "\n",
-        "# Create lists for categorical and numerical columns in the imputed DataFrame\n",
+        "\n",
         "categorical_columns_imputed_corrected = []\n",
         "numerical_columns_imputed_corrected = []\n",
         "\n",
-        "# Iterate through the original categorical and numerical columns and find their corresponding names in the transformed DataFrame\n",
         "for original_col in categorical_columns_original:\n",
         "    for transformed_col in transformed_feature_names:\n",
         "        if original_col in transformed_col:\n",
         "            categorical_columns_imputed_corrected.append(transformed_col)\n",
-        "            break # Assuming each original column maps to one transformed column or a set of OHE columns later\n",
-        "\n",
+        "            break\n",
         "for original_col in numerical_columns_original:\n",
         "     for transformed_col in transformed_feature_names:\n",
         "        if original_col in transformed_col:\n",
-        "            # Check if the transformed column is indeed numerical in the imputed dataframe\n",
+        "\n",
         "            if train_imputed_df[transformed_col].dtype in [np.int64, np.float64]:\n",
         "                numerical_columns_imputed_corrected.append(transformed_col)\n",
         "            break\n",
@@ -3977,25 +3949,24 @@
         "outputId": "957c211d-53cb-41d4-8df1-2e2faf778755"
       },
       "source": [
-        "# Re-identify categorical and numerical columns based on the original train_df dtypes\n",
+        "\n",
         "categorical_columns_original = train_df.select_dtypes(include=['object', 'category']).columns.tolist()\n",
         "numerical_columns_original = train_df.select_dtypes(include=np.number).columns.tolist()\n",
         "\n",
-        "# Get the feature names from the transformer.\n",
+        "\n",
         "transformed_feature_names = trf1.get_feature_names_out(train_df.columns)\n",
         "\n",
-        "# Create lists for categorical and numerical columns in the imputed DataFrame\n",
         "categorical_columns_imputed_corrected = []\n",
         "numerical_columns_imputed_corrected = []\n",
         "\n",
-        "# Map original categorical column names to their transformed names\n",
+        "\n",
         "for original_col in categorical_columns_original:\n",
         "    for transformed_col in transformed_feature_names:\n",
         "        if original_col in transformed_col and transformed_col.startswith(('impute_', 'remainder__')):\n",
         "            categorical_columns_imputed_corrected.append(transformed_col)\n",
         "            break\n",
         "\n",
-        "# Map original numerical column names to their transformed names\n",
+        "\n",
         "for original_col in numerical_columns_original:\n",
         "     for transformed_col in transformed_feature_names:\n",
         "        if original_col in transformed_col and transformed_col.startswith(('impute_', 'remainder__')):\n",
@@ -4033,12 +4004,7 @@
         "outputId": "ff116440-e8e2-452c-d853-f065212dcc87"
       },
       "source": [
-        "# Review the corrected list of categorical columns in train_imputed_df:\n",
-        "# ['impute_Alley', 'impute_MasVnrType', 'impute_BsmtQual', 'impute_BsmtCond', 'impute_BsmtExposure', 'impute_BsmtFinType1', 'impute_BsmtFinType2', 'impute_Electrical', 'impute_FireplaceQu', 'impute_GarageType', 'impute_GarageFinish', 'impute_GarageQual', 'impute_GarageCond', 'impute_PoolQC', 'impute_Fence', 'impute_MiscFeature', 'remainder__MSZoning', 'remainder__Street', 'remainder__LotShape', 'remainder__LandContour', 'remainder__Utilities', 'remainder__LotConfig', 'remainder__LandSlope', 'remainder__Neighborhood', 'remainder__Condition1', 'remainder__Condition2', 'remainder__BldgType', 'remainder__HouseStyle', 'remainder__RoofStyle', 'remainder__RoofMatl', 'remainder__Exterior1st', 'remainder__Exterior2nd', 'remainder__ExterQual', 'remainder__ExterCond', 'remainder__Foundation', 'remainder__Heating', 'remainder__HeatingQC', 'remainder__CentralAir', 'remainder__KitchenQual', 'remainder__Functional', 'remainder__PavedDrive', 'remainder__SaleType', 'remainder__SaleCondition']\n",
         "\n",
-        "# Based on domain knowledge and potential cardinality, select columns for one-hot encoding.\n",
-        "# Nominal features are good candidates for one-hot encoding.\n",
-        "# Features with very high cardinality might not be suitable for one-hot encoding directly.\n",
         "\n",
         "one_hot_columns_imputed = [\n",
         "    'impute_Alley',\n",
@@ -4053,7 +4019,7 @@
         "    'remainder__Utilities',\n",
         "    'remainder__LotConfig',\n",
         "    'remainder__LandSlope',\n",
-        "    'remainder__Neighborhood', # While Neighborhood has many categories, it's often treated as nominal.\n",
+        "    'remainder__Neighborhood',\n",
         "    'remainder__Condition1',\n",
         "    'remainder__Condition2',\n",
         "    'remainder__BldgType',\n",
@@ -4096,10 +4062,6 @@
         "outputId": "80976ac5-5f4c-4171-9525-335f9cb46f14"
       },
       "source": [
-        "# Review the corrected list of categorical columns in train_imputed_df:\n",
-        "# ['impute_Alley', 'impute_MasVnrType', 'impute_BsmtQual', 'impute_BsmtCond', 'impute_BsmtExposure', 'impute_BsmtFinType1', 'impute_BsmtFinType2', 'impute_Electrical', 'impute_FireplaceQu', 'impute_GarageType', 'impute_GarageFinish', 'impute_GarageQual', 'impute_GarageCond', 'impute_PoolQC', 'impute_Fence', 'impute_MiscFeature', 'remainder__MSZoning', 'remainder__Street', 'remainder__LotShape', 'remainder__LandContour', 'remainder__Utilities', 'remainder__LotConfig', 'remainder__LandSlope', 'remainder__Neighborhood', 'remainder__Condition1', 'remainder__Condition2', 'remainder__BldgType', 'remainder__HouseStyle', 'remainder__RoofStyle', 'remainder__RoofMatl', 'remainder__Exterior1st', 'remainder__Exterior2nd', 'remainder__ExterQual', 'remainder__ExterCond', 'remainder__Foundation', 'remainder__Heating', 'remainder__HeatingQC', 'remainder__CentralAir', 'remainder__KitchenQual', 'remainder__Functional', 'remainder__PavedDrive', 'remainder__SaleType', 'remainder__SaleCondition']\n",
-        "\n",
-        "# Identify ordinal columns from the remaining categorical columns based on domain knowledge.\n",
         "ordinal_columns_imputed = [col for col in categorical_columns_imputed_corrected if col not in one_hot_columns_imputed]\n",
         "\n",
         "print(\"Columns selected for ordinal encoding in the imputed DataFrame:\")\n",
@@ -4127,11 +4089,6 @@
         "outputId": "fc14c593-9c1a-40fa-dcf2-e6641c147629"
       },
       "source": [
-        "# Review the corrected list of categorical columns in train_imputed_df:\n",
-        "# ['impute_Alley', 'impute_MasVnrType', 'impute_BsmtQual', 'impute_BsmtCond', 'impute_BsmtExposure', 'impute_BsmtFinType1', 'impute_BsmtFinType2', 'impute_Electrical', 'impute_FireplaceQu', 'impute_GarageType', 'impute_GarageFinish', 'impute_GarageQual', 'impute_GarageCond', 'impute_PoolQC', 'impute_Fence', 'impute_MiscFeature', 'remainder__MSZoning', 'remainder__Street', 'remainder__LotShape', 'remainder__LandContour', 'remainder__Utilities', 'remainder__LotConfig', 'remainder__LandSlope', 'remainder__Neighborhood', 'remainder__Condition1', 'remainder__Condition2', 'remainder__BldgType', 'remainder__HouseStyle', 'remainder__RoofStyle', 'remainder__RoofMatl', 'remainder__Exterior1st', 'remainder__Exterior2nd', 'remainder__ExterQual', 'remainder__ExterCond', 'remainder__Foundation', 'remainder__Heating', 'remainder__HeatingQC', 'remainder__CentralAir', 'remainder__KitchenQual', 'remainder__Functional', 'remainder__PavedDrive', 'remainder__SaleType', 'remainder__SaleCondition']\n",
-        "\n",
-        "# Identify ordinal columns from the remaining categorical columns based on domain knowledge.\n",
-        "# These are columns with inherent order or ranking.\n",
         "ordinal_columns_imputed = [\n",
         "    'impute_BsmtQual',\n",
         "    'impute_BsmtCond',\n",
@@ -4142,8 +4099,8 @@
         "    'impute_GarageFinish',\n",
         "    'impute_GarageQual',\n",
         "    'impute_GarageCond',\n",
-        "    'impute_PoolQC', # PoolQC has a ranking of quality\n",
-        "    'impute_Fence', # Fence has a ranking of privacy/type\n",
+        "    'impute_PoolQC',\n",
+        "    'impute_Fence',\n",
         "    'remainder__ExterQual',\n",
         "    'remainder__ExterCond',\n",
         "    'remainder__HeatingQC',\n",
@@ -6710,11 +6667,6 @@
         "outputId": "936a6cfc-f42a-44d9-ce17-3fc8d2d1983c"
       },
       "source": [
-        "# Based on the previous steps, we know the original numerical columns\n",
-        "# and their transformed names in train_imputed_df, which are passed through\n",
-        "# to train_encoded_df with the same names (prefixed with 'remainder__').\n",
-        "# The imputed numerical columns also retain their numerical nature.\n",
-        "\n",
         "numerical_columns_to_scale = [\n",
         "    col for col in train_encoded_df.columns\n",
         "    if col in numerical_columns_imputed_corrected and col != 'remainder__SalePrice'\n",
